base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cicd-demo-by-go
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: cicd-demo-by-go
