base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cicd-demo-by-go
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/load-balancer-name: cicd-demo-by-go-alb
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS-1-2-Ext-2018-06
    alb.ingress.kubernetes.io/healthcheck-path: /index
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-1:949993607219:certificate/20d4f92e-d679-4cf1-85d3-0e523737da57
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'

spec:
  rules:
    - host: cicd-dev-demo.opencanvasatelier.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ssl-redirect
                port:
                  name: use-annotation
          - path: /index
            pathType: Prefix
            backend:
              service:
                name: cicd-demo-by-go
                port:
                  number: 80
          - path: /result
            pathType: Prefix
            backend:
              service:
                name: cicd-demo-by-go
                port:
                  number: 80
          - path: /api/v1/ping
            pathType: Prefix
            backend:
              service:
                name: cicd-demo-by-go
                port:
                  number: 80
          - path: /api/v1/hoge
            pathType: Prefix
            backend:
              service:
                name: cicd-demo-by-go
                port:
                  number: 80
